--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
 			      <div class="clear"></div>
 		     </ul>
 	   	 </div>
+	<iframe src='https://webchat.botframework.com/embed/healthbot-wu8bnoi?s=0pfGYBOaHYk.J0_ZYbNWbSizm1IKC8JKtW2YKnEsYrYYNxw1sOjU6vg'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 		<div class="copy">
 			<p class="w3-link">© All Rights Reserved by Deva.Designed for FRT.</p>
 		</div>
