--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	        <li><a href="event.html">Events</a></li>	        
 	        <li><a href="service.html">Services</a></li>
 	        <li><a href="contact.html">Contact</a></li>
+		<li><a href="healthbot.html">Health Bot</a></li>
 	     </ul>
 	</div>
 	<div class="clear"></div>
